unpackaged/main/default/objects/Customers_Snapshot__c/Customers_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Customers-Snapshot</label>
    <nameField>
        <label>Customers-Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customers-Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>