unpackaged/main/default/objects/Customers_Snapshot__c/fields/Cancelation__c.field-meta.xml
<CustomField>
    <fullName>Cancelation__c</fullName>
    <label>Cancelation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>