unpackaged/main/default/objects/Customers_Snapshot__c/fields/Downgrade__c.field-meta.xml
<CustomField>
    <fullName>Downgrade__c</fullName>
    <label>Downgrade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>