unpackaged/main/default/objects/Customers_Snapshot__c/fields/Upgrade__c.field-meta.xml
<CustomField>
    <fullName>Upgrade__c</fullName>
    <label>Upgrade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>